# piquet

./: Cargo.toml
docs/: todo.md
src/: cards.rs  combinations.rs  game.rs  lib.rs
